# General settings
lib_LTLIBRARIES = libopencif.la
libopencif_la_SOURCES = 	opencif/command/command.cc \
				opencif/command/controlcommand/controlcommand.cc \
				opencif/command/controlcommand/callcommand/callcommand.cc \
				opencif/command/controlcommand/definitiondeletecommand/definitiondeletecommand.cc \
				opencif/command/controlcommand/definitionendcommand/definitionendcommand.cc \
				opencif/command/controlcommand/definitionstartcommand/definitionstartcommand.cc \
				opencif/command/fraction/fraction.cc \
				opencif/command/layercommand/layercommand.cc \
				opencif/command/point/point.cc \
				opencif/command/primitivecommand/primitivecommand.cc \
				opencif/command/primitivecommand/pathbasedcommand/pathbasedcommand.cc \
				opencif/command/primitivecommand/pathbasedcommand/polygoncommand/polygoncommand.cc \
				opencif/command/primitivecommand/pathbasedcommand/wirecommand/wirecommand.cc \
				opencif/command/primitivecommand/positionbasedcommand/positionbasedcommand.cc \
				opencif/command/primitivecommand/positionbasedcommand/boxcommand/boxcommand.cc \
				opencif/command/primitivecommand/positionbasedcommand/roundflashcommand.cc \
				opencif/command/rawcontentcommand/rawcontentcommand.cc \
				opencif/command/rawcontentcommand/commentcommand/commentcommand.cc \
				opencif/command/rawcontentcommand/userextentioncommand/userextentioncommand.cc \
				opencif/command/size/size.cc \
				opencif/command/transformation/transformation.cc \
				opencif/file/file.cc \
				opencif/finitestatemachine/finitestatemachine.cc \
				opencif/finitestatemachine/state.cc \
				opencif/finitestatemachine/ciffsm.cc
libopencif_la_LDFLAGS = -version-info 1:0:0 -all-static
nobase_include_HEADERS = 	opencif/opencif.h \
				opencif/command/command.h \
				opencif/command/controlcommand/controlcommand.h \
				opencif/command/controlcommand/callcommand/callcommand.h \
				opencif/command/controlcommand/definitiondeletecommand/definitiondeletecommand.h \
				opencif/command/controlcommand/definitionendcommand/definitionendcommand.h \
				opencif/command/controlcommand/definitionstartcommand/definitionstartcommand.h \
				opencif/command/fraction/fraction.h \
				opencif/command/layercommand/layercommand.h \
				opencif/command/point/point.h \
				opencif/command/primitivecommand/primitivecommand.h \
				opencif/command/primitivecommand/pathbasedcommand/pathbasedcommand.h \
				opencif/command/primitivecommand/pathbasedcommand/polygoncommand/polygoncommand.h \
				opencif/command/primitivecommand/pathbasedcommand/wirecommand/wirecommand.h \
				opencif/command/primitivecommand/positionbasedcommand/positionbasedcommand.h \
				opencif/command/primitivecommand/positionbasedcommand/boxcommand/boxcommand.h \
				opencif/command/primitivecommand/positionbasedcommand/roundflashcommand.h \
				opencif/command/rawcontentcommand/rawcontentcommand.h \
				opencif/command/rawcontentcommand/commentcommand/commentcommand.h \
				opencif/command/rawcontentcommand/userextentioncommand/userextentioncommand.h \
				opencif/command/size/size.h \
				opencif/command/transformation/transformation.h \
				opencif/file/file.h \
				opencif/finitestatemachine/finitestatemachine.h \
				opencif/finitestatemachine/state.h \
				opencif/finitestatemachine/ciffsm.h

EXTRA_DIST = 	doc/ \
		opencif/opencif.h \
		opencif/command/command.h \
		opencif/command/controlcommand/controlcommand.h \
		opencif/command/controlcommand/callcommand/callcommand.h \
		opencif/command/controlcommand/definitiondeletecommand/definitiondeletecommand.h \
		opencif/command/controlcommand/definitionendcommand/definitionendcommand.h \
		opencif/command/controlcommand/definitionstartcommand/definitionstartcommand.h \
		opencif/command/fraction/fraction.h \
		opencif/command/layercommand/layercommand.h \
		opencif/command/point/point.h \
		opencif/command/primitivecommand/primitivecommand.h \
		opencif/command/primitivecommand/pathbasedcommand/pathbasedcommand.h \
		opencif/command/primitivecommand/pathbasedcommand/polygoncommand/polygoncommand.h \
		opencif/command/primitivecommand/pathbasedcommand/wirecommand/wirecommand.h \
		opencif/command/primitivecommand/positionbasedcommand/positionbasedcommand.h \
		opencif/command/primitivecommand/positionbasedcommand/boxcommand/boxcommand.h \
		opencif/command/primitivecommand/positionbasedcommand/roundflashcommand.h \
		opencif/command/rawcontentcommand/rawcontentcommand.h \
		opencif/command/rawcontentcommand/commentcommand/commentcommand.h \
		opencif/command/rawcontentcommand/userextentioncommand/userextentioncommand.h \
		opencif/command/size/size.h \
		opencif/command/transformation/transformation.h \
		opencif/file/file.h \
		opencif/finitestatemachine/finitestatemachine.h \
		opencif/finitestatemachine/state.h \
		opencif/finitestatemachine/ciffsm.h \
		opencif/command/command.cc \
		opencif/command/controlcommand/controlcommand.cc \
		opencif/command/controlcommand/callcommand/callcommand.cc \
		opencif/command/controlcommand/definitiondeletecommand/definitiondeletecommand.cc \
		opencif/command/controlcommand/definitionendcommand/definitionendcommand.cc \
		opencif/command/controlcommand/definitionstartcommand/definitionstartcommand.cc \
		opencif/command/fraction/fraction.cc \
		opencif/command/layercommand/layercommand.cc \
		opencif/command/point/point.cc \
		opencif/command/primitivecommand/primitivecommand.cc \
		opencif/command/primitivecommand/pathbasedcommand/pathbasedcommand.cc \
		opencif/command/primitivecommand/pathbasedcommand/polygoncommand/polygoncommand.cc \
		opencif/command/primitivecommand/pathbasedcommand/wirecommand/wirecommand.cc \
		opencif/command/primitivecommand/positionbasedcommand/positionbasedcommand.cc \
		opencif/command/primitivecommand/positionbasedcommand/boxcommand/boxcommand.cc \
		opencif/command/primitivecommand/positionbasedcommand/roundflashcommand.cc \
		opencif/command/rawcontentcommand/rawcontentcommand.cc \
		opencif/command/rawcontentcommand/commentcommand/commentcommand.cc \
		opencif/command/rawcontentcommand/userextentioncommand/userextentioncommand.cc \
		opencif/command/size/size.cc \
		opencif/command/transformation/transformation.cc \
		opencif/file/file.cc \
		opencif/finitestatemachine/finitestatemachine.cc \
		opencif/finitestatemachine/state.cc \
		opencif/finitestatemachine/ciffsm.cc
# Specify some flags to be passed to the compiler
# AM_CFLAGS = -I/some/include/path -L/some/lib/path

# Specify distributable binaries
# bin_PROGRAMS = test
# test_SOURCES = test.c

# Name of the static library
LDADDBASE = libopencif.la

# Specify the libraries to compile our library and the accompanying binaries (change these according to your needs)
LDADD = $(LDADDBASE)
