#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.69])
AC_INIT([LibOpenCIF], [1.0], [moises.chavez.martinez@gmail.com])
AC_CONFIG_SRCDIR([opencif/opencif.h])
AC_CONFIG_HEADERS([config.h])
AM_INIT_AUTOMAKE

LT_INIT

# Checks for programs.
AC_PROG_CXX
AC_PROG_CC

# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

AC_OUTPUT(Makefile)
